--- a/WebContent/old/register.html
+++ b/WebContent/old/register.html
@@ -1,92 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="description" content="description"/>
-<meta name="keywords" content="keywords"/> 
-<meta name="author" content="author"/> 
-<link rel="stylesheet" type="text/css" href="default.css" media="screen"/>
-<title>2013年新生接机报名 Register for Airport Pick-up 2013 - 施福基督教会 Suffolk Christian Church | 校园团契 Campus Fellowship</title>
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script>
-	function formDestinationChange(select){
-		if (select == "other") {
-			$("#offCampus").css("display", "inline");
-		} else {
-			$("#offCampus").css("display", "none");
-		};			
-	}
-</script>
+	<title>施福基督教会 Suffolk Christian Church | 校园团契</title>
+	<style type="text/css">
+		nav ul {
+			list-style-type: none;
+		}
+		nav ul li {
+			display:inline;
+		}
+
+		form {
+			display: block;
+		}
+		#form-flightNumber::-webkit-input-placeholder { text-transform:none; }
+		#form-flightNumber:-moz-placeholder { text-transform:none; }
+	</style>
+	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script>
+		function formDestinationChange(select){
+			if (select == "other") {
+				$("#form-offCampus").css("display", "inline");
+				$("#form-label-offCampus").css("display", "inline");
+			} else {
+				$("#form-offCampus").css("display", "none");
+				$("#form-label-offCampus").css("display", "none");
+			};
+			
+		}
+	</script>
 </head>
 <body>
-
-<div class="header">
-	<h1>施福基督教会 Suffolk Christian Church</h1>
-	<h2>校园团契 Campus Fellowship</h2>
-	<h3>2013年新生接机</h3>
-</div>
-
-<div class="navigation">
-	<a href="index.html">Home</a>
-	<a href="register.html">Register for Airport Pick-up 2013</a>
-	<a href="contact-us.html">Contact Us</a>
-	<div class="clearer"><span></span></div>
-</div>
-
-<div class="container">
-	<div class="content">
-
-		<h1>2013年新生接机报名</h1>
-		<form action="" method="post">
-				<p>* Required</p>
+	<nav>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="register.html">Register for Airport Pick-up</a></li>
+			<li><a href="listUser.jsp">Show all users</a></li>
+		</ul>
+	</nav>
+	<div class="body">
+		<div class="body-title"><h1>教会接机报名</h1></div>
+		<div class="body-content">
+			<form action="" method="post">
+				<div class="required-asterisk">* Required</div>
 				<div class="form-basicInfo">
-					<h2>基本信息</h2>
-					<p><label for="form-lastName">姓: </label>
-					<input type="text" name="lastName" id="form-lastName" placeholder="Last name"><span class="ss-required-asterisk">*</span></p>
-					<p><label for="form-firstName">名: </label>
+					<p>基本信息</p>
+					<label for="form-lastName">姓: </label>
+					<input type="text" name="lastName" id="form-lastName" placeholder="Last name"><span class="ss-required-asterisk">*</span>
+					<label for="form-firstName">名: </label>
 					<input type="text" name="firstName" id="form-firstName" placeholder="First name">
-					<span class="ss-required-asterisk">*</span></p>
-					<p><label for="form-email">邮箱: </label>
-					<input type="email" name="email" id="form-email" placeholder="Email"><span class="ss-required-asterisk">*</span></p>
-					<p><label for="form-emergencyContact">国内紧急联系电话: </label>
+					<span class="ss-required-asterisk">*</span><br>
+					<label for="form-email">邮箱: </label>
+					<input type="email" name="email" id="form-email" placeholder="Email"><span class="ss-required-asterisk">*</span><br>
+					<label for="form-emergencyContact">国内紧急联系电话: </label>
 					<input type="text" name="emergencyContact" id="form-emergencyContact" placeholder="Emergency contact" onkeyup= "value=value.replace(/[^\d]/g, '')">
-					<span class="ss-required-asterisk">*</span></p>
+					<span class="ss-required-asterisk">*</span><br>
 				</div>
-				<div class="divider"></div>
 				<div class="form-flightInfo">
-					<h2>航班信息</h2>
-					<p><label for="form-flightDate">到达日期: </label>
+					<p>航班信息</p>
+					<label for="form-flightDate">到达日期: </label>
 					<input type="text" name="flightDate" id="form-flightDate" placeholder="Flight date">
-					<span class="ss-required-asterisk">*</span></p>
-					<p><label for="form-flightNumber">航班号: </label>
+					<span class="ss-required-asterisk">*</span><br>
+					<label for="form-flightNumber">航班号: </label>
 					<input type="text" name="flightNumber" id="form-flightNumber" style="text-transform:uppercase" placeholder="Flight number">
-					<span class="ss-required-asterisk">*</span></p>
-					<p><label for="form-flightArrivalTime">到达时间: </label>
+					<span class="ss-required-asterisk">*</span><br>
+					<label for="form-flightArrivalTime">到达时间: </label>
 					<input type="text" name="flightArrivalTime" id="form-flightArrivalTime" placeholder="Arrival time">
-					<span class="ss-required-asterisk">*</span></p>
-					<p><label for="form-flightArrivalTerminal">到达航站楼: </label>
+					<span class="ss-required-asterisk">*</span><br>
+					<label for="form-flightArrivalTerminal">到达航站楼: </label>
 					<input type="text" name="flightArrivalTerminal" id="form-flightArrivalTerminal" placeholder="Arrival terminal">
-					<span class="ss-required-asterisk">*</span></p>
+					<span class="ss-required-asterisk">*</span><br>
 				</div>
-				<div class="divider"></div>
 				<div class="form-stonyBrookInfo">
-					<h2>石溪信息</h2>
+					<p>石溪信息</p>
 					
-					<p><label for="form-destination">宿舍或校外住址: </label>
+					<label for="form-destination">宿舍或校外住址: </label>
 					<select name="destination" id="form-destination" onchange="formDestinationChange(this.value)">
 						<option value="chapin">Chapin</option>
 						<option value="west">Schomburg or West</option>
 						<option value="other">校外或其他</option>
 					</select>
-					<span class="ss-required-asterisk">*</span>
-					<div id="offCampus" style="display: none;">
-					<label for="form-offCampus" id="form-label-offCampus">校外住址: </label>
-					<input type="text" name="offCampus" id="form-offCampus" placeholder="Off campus address">
-					<span class="ss-required-asterisk">*</span>
-					</p></div>
-					<p><label for="form-studentId">学号: </label>
-					<input type="text" name="studentId" id="form-studentId" placeholder="Student ID"></p>
-					<p><label for="form-major">专业: </label>
+					<label for="form-offCampus" id="form-label-offCampus" style="display: none;">校外住址: </label>
+					<input type="text" name="offCampus" id="form-offCampus" placeholder="Off campus address" style="display: none;"><br>
+					<label for="form-studentId">学号: </label>
+					<input type="text" name="studentId" id="form-studentId" placeholder="Student ID"><br>
+					<label for="form-major">专业: </label>
 					<select name="major" id="form-major">
 						<option value="0" selected>Select a program:</option>
 						<option value="UND">本科生未分专业</option>
@@ -135,27 +133,20 @@
 						<option value="WST">Women's Studies</option>        
 						<option value="WRT">Writing and Rhetoric</option>
 						<option value="ohter">Others</option>
-					</select><span class="ss-required-asterisk">*</span></p>
+					</select><br>
 
 
 
-					<p><label for="form-qq">QQ: </label>
-					<input type="text" name="qq" id="form-qq" placeholder="QQ"><span class="ss-required-asterisk">*</span></p>
-					<p><label for="form-qqName">群名片: </label>
-					<input type="text" name="qqName" id="form-qqName" placeholder="QQ name"><span class="ss-required-asterisk">*</span></p>
+					<label for="form-qq">QQ: </label>
+					<input type="text" name="qq" id="form-qq" placeholder="QQ"><br>
+					<label for="form-qqName">群名片: </label>
+					<input type="text" name="qqName" id="form-qqName" placeholder="QQ name"><br>
 				</div>
 				
-				<p><input type="reset" value="reset"  onclick="formDestinationChange(this.value)">
-				<input type="submit" value="submit"></p>
+				<input type="reset" value="reset">
+				<input type="submit" value="submit">
 			</form>
-		
+		</div>
 	</div>
-
-	<div class="footer">
-		&copy; 2013 <a href="index.html">Suffolk Christian Church Campus Fellowship</a>. All rights reserved.
-	</div>
-
-</div>
-
 </body>
 </html>
