--- a/WebContent/Summer/register.html
+++ b/WebContent/Summer/register.html
@@ -8,15 +8,7 @@
 <link rel="stylesheet" type="text/css" href="default.css" media="screen"/>
 <title>2013年新生接机报名 Register for Airport Pick-up 2013 - 施福基督教会 Suffolk Christian Church | 校园团契 Campus Fellowship</title>
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script>
-	function formDestinationChange(select){
-		if (select == "other") {
-			$("#offCampus").css("display", "inline");
-		} else {
-			$("#offCampus").css("display", "none");
-		};			
-	}
-</script>
+<script src="register.js"></script>
 </head>
 <body>
 
