--- a/WebContent/register.html
+++ b/WebContent/register.html
@@ -37,7 +37,7 @@
 	<div class="content">
 
 		<h1>2013年新生接机报名</h1>
-		<form action="" method="post">
+		<form action="Controller" method="post">
 				<p>* Required</p>
 				<div class="form-basicInfo">
 					<h2>基本信息</h2>
