Set YaHei for chinese characters. Set placeholder for IE.

--- a/WebContent/register.html
+++ b/WebContent/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="description" content="description"/>
 <meta name="keywords" content="keywords"/> 
 <meta name="author" content="author"/> 
@@ -13,6 +13,7 @@
 <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
 <script src="jquery.maskedinput.min.js"></script>
 <script src="js/jquery.validate.min.js"></script>
+<script src="js/jquery.placeholder.min.js"></script>
 <script src="http://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
 <script src="register.js"></script>
 </head>
